init exemplo linear layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Aula 6 - Layout</string>
+    <string name="icone_aplicacao">Icone da Aplicacao</string>
+    <string name="titulo">Titulo</string>
+    <string name="subtitulo">SubTítulo</string>
 </resources>
