--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Loja Virtual Atlética</string>
+    <string name="produto_detalhe_btn_comprar">Comprar</string>
+    <string name="produto_detalhe_txt_descricao">Descrição</string>
 </resources>
