--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,18 @@
 <resources>
+
     <string name="app_name">Loja Virtual Atlética</string>
+
+<!--Tela Produto Detalhe   -->
     <string name="produto_detalhe_btn_comprar">Comprar</string>
     <string name="produto_detalhe_txt_descricao">Descrição</string>
+
+<!--Menu Drawer    -->
+    <string name="menu_drawe_sair">Sair</string>
+    <string name="menu_drawe_meu_carrinho">Meu Carrinho</string>
+    <string name="menu_drawe_minhas_compras">Minhas Compras</string>
+    <string name="menu_categorias">Categorias</string>
+    <string name="menu_drawe_minha_conta">Minha Conta</string>
+    <string name="menu_drawe_home">Home</string>
+    <string name="toogle_open">Open</string>
+    <string name="toogle_close">Close</string>
 </resources>
