--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,5 @@
 <resources>
-
     <string name="app_name">Spring Shopping</string>
-
-    <!--Tela Produto Detalhe   -->
-
 
     <!--Menu Drawer -->
     <string name="menu_drawe_sair">Sair</string>
@@ -28,7 +24,6 @@
     <string name="usuario_login_entrar">Entrar</string>
     <string name="usuario_login_titulo">Bem vindo!</string>
 
-
     <!--    Tela Perfil-->
     <string name="usuario_perfil_sobrenome">Sobrenome</string>
     <string name="usuario_perfil_renda_familiar">Renda Familiar</string>
@@ -41,13 +36,6 @@
     <string name="cadastro_produto_unidade">Unidade</string>
     <string name="cadastro_produto_preco">Preço</string>
     <string name="cadastro_produto_categoria">Categoria</string>
-
-<!--    Tela Compra Produto-->
-    <string name="compra_produto_btn_comprar">Comprar</string>
-    <string name="compra_produto_txt_descricao">Descrição</string>
-    <string name="compra_produto_quantidade">Quantidade</string>
-    <string name="cadastrar_categoria_nome_categoria">Nome Categoria</string>
-
     <string-array name="categorias">
         <item>Bebidas</item>
         <item>Carnes</item>
@@ -56,7 +44,6 @@
         <item>Limpeza</item>
         <item>Higiene Pessoal</item>
     </string-array>
-
     <string-array name="unidade">
         <item>Unidade</item>
         <item>Dúzia</item>
@@ -65,5 +52,14 @@
         <item>Caixa</item>
         <item>Pacote</item>
     </string-array>
+
+<!--    Tela Compra Produto-->
+    <string name="compra_produto_btn_comprar">Comprar</string>
+    <string name="compra_produto_txt_descricao">Descrição</string>
+    <string name="compra_produto_quantidade">Quantidade</string>
+
+<!--    Tela Cadastrar categoria-->
+    <string name="cadastrar_categoria_btn_cadastrar">Cadastrar</string>
+    <string name="cadastrar_categoria_nome_categoria">Nome Categoria</string>
 
 </resources>
